[package]
name = "hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = {version="0.22.8", features=["lazy", "concat_str", "random", "unique_counts", "list", "dtype-datetime", "abs", "round_series", "is_in", "cum_agg", "dtype-categorical"] }
arrow-flight="9.1.0"
tokio = {version="1.18.2", features=["rt-multi-thread"]}
log="0.4.14"
spargebra = "0.2.0"
sparesults = "0.1.0"
oxrdf = "0.1.0"
reqwest= {version="0.11.10", features=["stream"]}
env_logger = "0.9.0"

[dev-dependencies]
bollard = "0.12.0"
rstest = "0.13.0"
polars = {version="0.22.8", features=["lazy", "csv-file", "random", "unique_counts", "list"]}
tokio = {version="1.18.2", features=["rt-multi-thread"]}
serial_test = "0.6.0"
