[package]
name = "hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = {version="0.22.8", features=["lazy", "concat_str", "random", "unique_counts", "list", "dtype-datetime", "abs", "round_series", "is_in", "cum_agg", "dtype-categorical"] }
tokio = {version="1.18.2", features=["rt-multi-thread"]}
log="0.4.14"
spargebra = "0.2.0"
sparesults = "0.1.0"
oxrdf = "0.1.0"
reqwest= {version="0.11.10", features=["stream"]}
env_logger = "0.9.0"
mimalloc = { version = "*", default-features = false }
tonic = "0.7.2"
prost = "0.10.4"
thiserror = "1.0.31"
tokio-stream = "0.1.9"
arrow2 = {version="0.12.0", features=["io_flight"]}
arrow-format = {version="0.6.0", features=["flight-data", "flight-service"]}
polars-core = "0.22.7"
sea-query = {version ="0.26.0", features=["with-chrono"]}
async-trait = "0.1.56"
base64 = "0.13.0"

[dev-dependencies]
bollard = "0.12.0"
rstest = "0.13.0"
polars = {version="0.22.8", features=["lazy", "csv-file", "random", "unique_counts", "list"]}
tokio = {version="1.18.2", features=["rt-multi-thread"]}
serial_test = "0.8.0"
futures-util = "0.3.21"
reqwest= {version="0.11.10", features=["stream", "json"]}
serde="1.0.139"

[build-dependencies]
tonic-build = "0.7.2"