[package]
name = "mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom={version="7.1.1", features=["alloc"]}
oxrdf = "0.1.0"
polars = {version="0.22.8", features=["lazy", "concat_str", "dtype-categorical", "is_in", "strings", "dtype-struct", "list", "horizontal_concat"] }
unic-char-range = "0.9.0"
mimalloc = { version = "*", default-features = false }
log="0.4.14"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
polars-utils = "0.22.7"
polars-core = "0.22.7"

[dev-dependencies]
rstest = "0.14.0"
