[package]
name = "mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom={version="7.1.1", features=["alloc"]}
oxrdf = "0.1.0"
polars = {version="0.22.8", features=["lazy", "concat_str", "dtype-categorical", "is_in", "strings", "dtype-struct", "list", "horizontal_concat", "rows", "dtype-datetime", "timezones", "polars-time", "temporal", "list_eval"] }
unic-char-range = "0.9.0"
mimalloc = { version = "*", default-features = false }
log="0.4.14"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
polars-utils = "0.22.7"
polars-core = "0.22.7"
chrono = "0.4"
chrono-tz = "0.6"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    ]}

[dev-dependencies]
rstest = "0.14.0"
serial_test = "0.8.0"