[package]
name = "py-query"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
pyo3 = {version = "0.16.5", features = ["extension-module"]}
dsl = {path="../dsl"}
hybrid = {path="../hybrid"}
thiserror="1.0.31"
polars-core = {version="0.22.7"}
oxrdf = "0.1.0"
simple-error = "0.2.3"
tokio="1.20.0"

[lib]
name = "otit_swt_query"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"