[package]
name = "py-mapper"
version = "0.1.4"
edition = "2021"

[workspace]

[dependencies]
pyo3 = {version = "0.16.5", features = ["extension-module"]}
mapper = {path="../mapper"}
thiserror="1.0.31"
polars-core = {version="0.22.7"}
oxrdf = "0.1.0"
simple-error = "0.2.3"

[lib]
name = "otit_swt_mapper"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"