[package]
name = "py_otit_swt_mapper"
version = "0.1.13"
edition = "2021"

[workspace]

[dependencies]
pyo3 = {version = "0.16.5", features = ["extension-module"]}
mapper = {path="../mapper"}
arrow_python_utils = {path="../arrow_python_utils"}
thiserror="1.0.31"
polars-core = {version="0.23.2"}

[lib]
name = "otit_swt_mapper"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"